theme issues *add decoline and fancy theme files *change watermark *adjust main theme

--- a/beamerthemePfungstadt.sty
+++ b/beamerthemePfungstadt.sty
@@ -13,7 +13,7 @@
 
 \useinnertheme{fancy}
 \useoutertheme{decolines}
-\usecolortheme{chameleon}
+\usecolortheme{default}
 
 \setbeamertemplate{navigation symbols}{}
 
