--- a/beamerthemePfungstadt.sty
+++ b/beamerthemePfungstadt.sty
@@ -13,7 +13,7 @@
 
 \useinnertheme{fancy}
 \useoutertheme{decolines}
-\usecolortheme{default}
+\usecolortheme{anodorhynchus}
 
 \setbeamertemplate{navigation symbols}{}
 
